k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cemedica-backend-service
spec:
  selector:
    app: cemedica-backend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
